# online-bot-test-firestore

./: .devcontainer.json  .gitignore  Dockerfile  Makefile  generate_openapi_schema.py  package.json  pyproject.toml  requirements.txt  sample.py  service.yaml
app/: crud.py  database.py  main.py  schemas.py
app/tests/: test_app.py
scripts/: entrypoint.sh
swagger-ui/: package-lock.json  package.json
swagger-ui/pages/: index.tsx
swagger-ui/public/: openapi.json
