[tool.poetry]
name = "online-bot-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
firebase-admin = "^5.2.0"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
